# numerbay

./: .env  .gitignore  404.html  CNAME  CONTRIBUTING.md  NumerBay Example.ipynb  README.md  docker-compose.override.yml  docker-compose.production.yml  docker-compose.traefik.yml  docker-compose.yml  index.html  search-index.json  sitemap.xml
backend/app/: .flake8  .pylintrc  bootstrap-db.sh  mypy.ini  prestart.sh  pyproject.toml  tests-start.sh  worker-start.sh
backend/app/alembic/versions/: 0488a8941877_deprecate_old_product_fields.py  06bf219bcb57_change_product_description_type.py  08f1bb0eed37_crypto_support.py  105f705b7f1c_add_product_option.py  1386741fb433_add_encryption_product_property.py  1b87f6a5cf85_crypto_support.py  1d2a044a16eb_add_user_last_sync_date.py  205e12d72c7d_add_daily_option_to_product.py  238dff73eb17_add_voting.py  245241d21665_add_globals_and_numerai_permissions.py  2972c22341f4_add_voting.py  2b2aadbf1063_crypto_support.py  2d9bc65f10c5_add_product_option.py  2f4a9d6c8b12_add_round_open_processed_marker.py  306195a7f16f_add_order_last_submit_round.py  3554967bf4ab_modify_order_transaction.py  3c166804c87f_add_stake_mode.py  40668f3c9788_add_product_delivery_counter.py  43cecbe71690_add_props_to_user.py  474983073c61_add_coupon.py  47d1c356710b_add_quantity_sales_global_stats.py  4e214fdd8879_add_product_expiration.py  5536b5b72c9b_add_product_ready_indicator.py  56a72fdc2de5_add_product_sales_stats.py  78477dc7bb95_add_favorite.py  (+46 more)
backend/app/app/: backend_pre_start.py  celeryworker_pre_start.py  gunicorn_conf.py  initial_data.py  main.py  utils.py  worker.py
backend/app/scripts/: lint.sh
(+495 files in other folders)
